# facesOpencv

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
